<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_insert">

    <fragment
        android:id="@+id/navigation_insert"
        android:name="com.example.crudmahasiswa.ui.insert.InsertFragment"
        android:label="@string/title_insert"
        tools:layout="@layout/fragment_insert" />

    <fragment
        android:id="@+id/navigation_read"
        android:name="com.example.crudmahasiswa.ui.read.ReadFragment"
        android:label="@string/title_read"
        tools:layout="@layout/fragment_read" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.crudmahasiswa.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
</navigation>
