<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFF"
    android:padding="@dimen/padding_margin_8dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTotalMahasiswa"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            app:cardCornerRadius="@dimen/padding_margin_8dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_card_border_red"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/parentTotal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#CDDC39"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/total"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/totalMahasiswa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12"
                    android:textAlignment="center"
                    android:textSize="64sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/parentTotal" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTeknik"
            android:layout_width="0dp"
            android:layout_height="155dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:cardCornerRadius="@dimen/padding_margin_8dp"
            app:layout_constraintStart_toStartOf="@+id/cardTotalMahasiswa"
            app:layout_constraintTop_toBottomOf="@+id/cardTotalMahasiswa"
            app:layout_constraintWidth_percent="0.48">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_card_border_tosca"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/parentTeknik"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#D1C34A"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/teknik"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/totalMahasiswaTeknik"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12"
                    android:textAlignment="center"
                    android:textSize="50sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/parentTeknik" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardInformatika"
            android:layout_width="0dp"
            android:layout_height="155dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:cardCornerRadius="@dimen/padding_margin_8dp"
            app:layout_constraintEnd_toEndOf="@id/cardTotalMahasiswa"
            app:layout_constraintTop_toBottomOf="@+id/cardTotalMahasiswa"
            app:layout_constraintWidth_percent="0.48">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_card_border_purple"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/parentInformatika"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#F6B658"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/informatika"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/totalMahasiswaInformatika"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12"
                    android:textAlignment="center"
                    android:textSize="50sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/parentInformatika" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardLastUpdate"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:layout_marginTop="@dimen/padding_margin_16dp"
            app:cardCornerRadius="@dimen/padding_margin_8dp"
            app:layout_constraintTop_toBottomOf="@id/cardTeknik">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_card_border_blue"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/parentLastUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#F6E22D"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/lastUpdate"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/parentLastUpdate"
                    android:orientation="vertical">

                    <TextView
                        android:layout_gravity="center"
                        android:id="@+id/lastUpdateTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="12"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/lastUpdateDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="12 Oktober 1990"
                        android:textAlignment="center"
                        android:textSize="26sp" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>